[package]
name = "rust-nonblocking_logger"
version = "0.1.0"
license = "MIT"
authors = ["Dmitrii Patsura <talk@dmtry.me>"]
edition = "2024"

[features]
default = ["colored", "time"]

[dependencies]
log = { version = "0.4.28", features = ["std"] }
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"], optional = true }
colored = { version = "3.0.0", optional = true }
libc = "0.2.177"
crossbeam-channel = "0.3.1"

[[example]]
name = "test"
required-features = ["colored", "time"]