[package]
name = "log_nonblock"
version = "0.1.0"
description = "Asyncronus logger that prints all messages to STDOUT or STDERR in non blocking mode"
license = "MIT"
authors = ["Dmitrii Patsura <talk@dmtry.me>"]
edition = "2024"
repository = "https://github.com/ovr/log_nonblock"

[features]
default = ["colors", "timestamps"]
timestamps = ["time"]
colors = ["colored"]
threads = []
stderr = []

[dependencies]
log = { version = "0.4.28", features = ["std"] }
# optional crates
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"], optional = true }
colored = { version = "3.0.0", optional = true }
crossbeam-channel = "0.5.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[[example]]
name = "test"
required-features = ["colored", "time"]